--- a/src/Web/Pages/Shared/_product.cshtml
+++ b/src/Web/Pages/Shared/_product.cshtml
@@ -1,10 +1,21 @@
 ﻿@model CatalogItemViewModel
 
 <form asp-page="/Basket/Index" method="post">
-    <img class="esh-catalog-thumbnail" src="@Model.PictureUri" />
-    <input class="esh-catalog-button" type="submit" value="[ ADD TO BASKET ]" />
+    <a href="/Product?Id=@Model.Id" alt="Product page for @Model.Name"><img class="esh-catalog-thumbnail" src="@Model.PictureUri" /></a>
+    <!-- Show the "Add to basket" button only if the item is available to order -->
+    @if (Model.AvailableToOrder)
+    {
+        <input class="esh-catalog-button" type="submit" value="[ ADD TO BASKET ]" />
+    }
+    else
+    {
+        <div class="esh-catalog-button-disabled">[ OUT OF STOCK ]</div>
+    }
     <div class="esh-catalog-name">
         <span>@Model.Name</span>
+    </div>
+    <div class="esh-catalog-instock">
+        <span>@Model.InStockText</span>
     </div>
     <div class="esh-catalog-price">
         <span>@Model.Price.ToString("N2")</span>
