--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <article class="row">
                     <section class="col-lg-7 col-md-6 col-xs-12">
                         <a asp-area="" asp-page="/Index">
-                            <img src="~/images/brand.png" alt="eShop On Web" />
+                            <img src="/images/logo.png" class="esh-app-logo" alt="eShopOnWeb" />
                         </a>
                     </section>
                     <partial name="_LoginPartial" />
@@ -43,7 +43,7 @@
                 <article class="row">
                     <section class="col-sm-6"></section>
                     <section class="col-sm-6">
-                        <div class="esh-app-footer-text hidden-xs"> e-ShopOnWeb. All rights reserved </div>
+                        <div class="esh-app-footer-text hidden-xs"> Contoso Outdoor Company. All rights reserved </div>
                     </section>
                 </article>
             </div>
