--- a/src/Web/wwwroot/css/catalog/catalog.component.css
+++ b/src/Web/wwwroot/css/catalog/catalog.component.css
@@ -1,16 +1,21 @@
 ﻿.esh-catalog-hero {
-  background-image: url("../../images/main_banner.png");
+  background-image: url("../../images/cover.jpg");
   background-size: cover;
   height: 260px;
-  width: 100%; }
+  width: 100%;
+  background-color: #0F6CBD;
+  background-blend-mode: multiply;
+}
 
 .esh-catalog-title {
   position: relative;
-  top: 74.28571px; }
+  top: 74.28571px;
+}
 
 .esh-catalog-filters {
-  background-color: #00A69C;
-  height: 65px; }
+  background-color: #0F6CBD;
+  height: 65px;
+}
 
 .esh-catalog-filter {
   -webkit-appearance: none;
@@ -25,32 +30,40 @@
   padding-bottom: 0;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  padding-top: 1.5rem; }
-  .esh-catalog-filter option {
-    background-color: #00A69C; }
+  padding-top: 1.5rem;
+}
+
+.esh-catalog-filter option {
+  background-color: #0F6CBD;
+}
 
 .esh-catalog-label {
   display: inline-block;
   position: relative;
-  z-index: 0; }
-  .esh-catalog-label::before {
-    color: rgba(255, 255, 255, 0.5);
-    content: attr(data-title);
-    font-size: 0.65rem;
-    margin-left: 0.5rem;
-    margin-top: 0.65rem;
-    position: absolute;
-    text-transform: uppercase;
-    z-index: 1; }
-  .esh-catalog-label::after {
-    background-image: url("../../images/arrow-down.png");
-    content: '';
-    height: 7px;
-    position: absolute;
-    right: 1.5rem;
-    top: 2.5rem;
-    width: 10px;
-    z-index: 1; }
+  z-index: 0;
+}
+
+.esh-catalog-label::before {
+  color: rgba(255, 255, 255, 0.5);
+  content: attr(data-title);
+  font-size: 0.65rem;
+  margin-left: 0.5rem;
+  margin-top: 0.65rem;
+  position: absolute;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+.esh-catalog-label::after {
+  background-image: url("../../images/arrow-down.png");
+  content: '';
+  height: 7px;
+  position: absolute;
+  right: 1.5rem;
+  top: 2.5rem;
+  width: 10px;
+  z-index: 1;
+}
 
 .esh-catalog-send {
   background-color: #83D01B;
@@ -58,30 +71,42 @@
   cursor: pointer;
   font-size: 1rem;
   margin-top: -1.5rem;
-  transition: all 0.35s; }
-  .esh-catalog-send:hover {
-    background-color: #4a760f;
-    transition: all 0.35s; }
+  transition: all 0.35s;
+}
+
+.esh-catalog-send:hover {
+  background-color: #4a760f;
+  transition: all 0.35s;
+}
 
 .esh-catalog-items {
-  margin-top: 1rem; }
+  margin-top: 1rem;
+}
 
 .esh-catalog-item {
   margin-bottom: 1.5rem;
   text-align: center;
   width: 33%;
   display: inline-block;
-  float: none !important; }
-  @media screen and (max-width: 1024px) {
-    .esh-catalog-item {
-      width: 50%; } }
-  @media screen and (max-width: 768px) {
-    .esh-catalog-item {
-      width: 100%; } }
+  float: none !important;
+}
+
+@media screen and (max-width: 1024px) {
+  .esh-catalog-item {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .esh-catalog-item {
+    width: 100%;
+  }
+}
 
 .esh-catalog-thumbnail {
   max-width: 370px;
-  width: 100%; }
+  width: 100%;
+}
 
 .esh-catalog-button {
   background-color: #83D01B;
@@ -92,24 +117,151 @@
   height: 3rem;
   margin-top: 1rem;
   transition: all 0.35s;
-  width: 80%; }
-  .esh-catalog-button.is-disabled {
-    opacity: .5;
-    pointer-events: none; }
-  .esh-catalog-button:hover {
-    background-color: #4a760f;
-    transition: all 0.35s; }
+  width: 80%;
+}
+
+.esh-catalog-button.is-disabled {
+  opacity: .5;
+  pointer-events: none;
+}
+
+.esh-catalog-button:hover {
+  background-color: #4a760f;
+  transition: all 0.35s;
+}
+
+.esh-catalog-button-disabled {
+  background-color: #d01b1b;
+  border: 0;
+  color: #FFFFFF;
+  cursor: not-allowed;
+  font-size: 1rem;
+  height: 3rem;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.35s;
+  width: 80%;
+  padding-top: 0.8em;
+}
 
 .esh-catalog-name {
   font-size: 1rem;
   font-weight: 300;
   margin-top: .5rem;
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
+
+.esh-catalog-instock {
+  font-size: 0.8rem;
+  font-weight: 100;
+  font-style: italic;
+  color: #444444;
+  text-align: center;
+}
 
 .esh-catalog-price {
   font-size: 28px;
   font-weight: 900;
-  text-align: center; }
-  .esh-catalog-price::before {
-    content: '$'; }
+  text-align: center;
+}
+
+.esh-catalog-price::before {
+  content: '$';
+}
+
+/* Product Page */
+
+.prd-order-panel {
+  margin-top: 5rem;
+  background-color: #eeeeee;
+}
+
+.prd-catalog-thumbnail {
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.prd-catalog-button {
+  background-color: #83D01B;
+  border: 0;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 1rem;
+  height: 3rem;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.35s;
+  width: 60%;
+  text-align: center;
+  display: block;
+}
+
+.prd-catalog-button.is-disabled {
+  opacity: .5;
+  pointer-events: none;
+}
+
+.prd-catalog-button:hover {
+  background-color: #4a760f;
+  transition: all 0.35s;
+}
+
+.prd-catalog-button-disabled {
+  background-color: #d01b1b;
+  border: 0;
+  color: #FFFFFF;
+  cursor: not-allowed;
+  font-size: 1rem;
+  height: 3rem;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.35s;
+  width: 60%;
+  padding-top: 0.8em;
+  text-align: center;
+}
+
+.prd-catalog-name {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-top: .5rem;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
+.prd-catalog-description {
+  font-size: 1.2rem;
+  font-weight: 100;
+  color: #444444;
+  margin-top: 1rem;
+}
+
+.prd-catalog-instock {
+  font-size: 0.8rem;
+  font-weight: 100;
+  font-style: italic;
+  color: #444444;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 3rem;
+}
+
+.prd-catalog-price {
+  font-size: 2rem;
+  font-weight: 900;
+  text-align: center;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.35s;
+  width: 80%;
+}
+
+.prd-catalog-price::before {
+  content: 'Price: $';
+  font-weight: 500;
+}
